--- a/forceanimateappbarlayout/src/main/AndroidManifest.xml
+++ b/forceanimateappbarlayout/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
-<manifest package="com.github.sjnyag"
-          xmlns:android="http://schemas.android.com/apk/res/android"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.github.sjnyag">
+
+<application android:allowBackup="true"
+             android:supportsRtl="true">
+
+</application>
+
+</manifest>
